--- a/個人簡歷 - 練習使用 Sass 變數開發網頁.html
+++ b/個人簡歷 - 練習使用 Sass 變數開發網頁.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./stylesheets/all.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
@@ -131,7 +131,7 @@
             <h2 class="display-4 text-center">前端工程師</h2>
             <div class="row justify-content-center">
                 <div class="col-md-5">
-                    <p>遇見到世界上另一個地方的您相當開心</p>
+                    <p>前端工程師前端工程師前端工程師</p>
                     <h3 class="h3">聯絡方式</h3>
                     <ul class="list-unstyled">
                         <li><i class="bi bi-envelope-paper"></i> voluptati@email.com</li>
